<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_10percent">10%</string>
    <string name="label_15percent">15%</string>
    <string name="label_20percent">20%</string>
    <string name="txt_label_amount">Tip:</string>
    <string name="hint_enter_total">Enter bill amount</string>
    <string name="txt_tip_amount">0.00</string>
    <string name="txt_currency_symbol">$</string>

</resources>
