<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <EditText
        android:id="@+id/et_bill_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/hint_enter_total"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_15percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onCalculate"
        android:text="@string/label_15percent" />

    <Button
        android:id="@+id/btn_20percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_15percent"
        android:layout_alignBottom="@+id/btn_15percent"
        android:layout_toRightOf="@+id/btn_15percent"
        android:onClick="onCalculate"
        android:text="@string/label_20percent" />

    <Button
        android:id="@+id/btn_10percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_15percent"
        android:layout_alignBottom="@+id/btn_15percent"
        android:layout_toLeftOf="@+id/btn_15percent"
        android:onClick="onCalculate"
        android:text="@string/label_10percent" />

    <RelativeLayout
        android:id="@+id/tipAmountSummary"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_15percent"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@+id/btn_10percent" >
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_currency_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tipAmountSummary"
        android:layout_centerHorizontal="true"
        android:text="@string/txt_currency_symbol"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_currency_symbol"
        android:layout_alignBottom="@+id/tv_currency_symbol"
        android:layout_toRightOf="@+id/tv_currency_symbol"
        android:text="@string/txt_tip_amount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_currency_symbol"
        android:layout_alignBottom="@+id/tv_currency_symbol"
        android:layout_alignRight="@+id/btn_10percent"
        android:text="@string/txt_label_amount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>